# long-arithmetic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
benchmark/: CMakeLists.txt
benchmark/benchmarks/: abs.cpp  add.cpp  compare.cpp  div.cpp  from_string.cpp  input.cpp  is_equal.cpp  is_lower_than.cpp  mul.cpp  neg.cpp  output.cpp  sqrt.cpp  sub.cpp  tools.cpp  tools.hpp
docs/: input-spec.md  repr-spec.md  string-repr-spec.md
long-arithmetic/: CMakeLists.txt
long-arithmetic/include/: big_number.hpp
long-arithmetic/source/: big_number.cpp
long-arithmetic/source/big_number/: basic_arithmetic.cpp  basic_arithmetic.hpp  constructors.cpp  constructors.hpp  div.cpp  getters.cpp  getters.h  mul.cpp
long_arithmetic/: CMakeLists.txt
long_arithmetic/include/: big_number.hpp  constants.hpp  error.hpp
long_arithmetic/source/: error.cpp
long_arithmetic/source/big_number/: abs.cpp  add_sub.cpp  basic_arithmetic.cpp  basic_arithmetic.hpp  constants.hpp  constructors.cpp  constructors.hpp  div.cpp  getters.cpp  getters.hpp  input.cpp  is_equal.cpp  is_lower_than.cpp  mul.cpp  neg.cpp  output.cpp  raw_number.cpp  raw_number.hpp  sqrt.cpp
tests/: CMakeLists.txt  additionRandomTest  subtractionRandom.cpp  subtractionRandomTest
tests/legacy/: additionRandom.cpp  multiplication.cpp  multiplicationRandom.cpp  randomString.h  sqrtRandom.cpp
tests/tests/: abs.cpp  abs_neg.cpp  add.cpp  addition.cpp  additionRandom.cpp  base.cpp  constructor.cpp  constructorRandom.cpp  constructors.cpp  division.cpp  divisionManual.cpp  divisionRandom.cpp  ex_division.cpp  ex_mul.cpp  input.cpp  is_equal.cpp  is_lower_than.cpp  mul.cpp  multiplication.cpp  multiplicationRandom.cpp  neg.cpp  output.cpp  randomString.h  random_mul.cpp  sqrt.cpp  sqrtRandom.cpp  sub.cpp  subtraction.cpp  subtractionRandom.cpp  tools.cpp  tools.hpp
